--- a/cpp/projects/main/CMakeLists.txt
+++ b/cpp/projects/main/CMakeLists.txt
@@ -41,7 +41,8 @@ set(SOURCES
     ../../src/codec/json_config.cpp
     ../../src/codec/binary_decoder_L1.cpp
     ../../src/codec/binary_decoder_L2.cpp
-    ../../src/technical_analysis.cpp
+    ../../src/AnalysisTechnical.cpp
+    ../../src/AnalysisHighFrequency.cpp
     ../../src/main.cpp
 )
 
@@ -59,7 +60,8 @@ set(HEADERS
     ../../include/codec/binary_decoder_L2.hpp
     ../../include/codec/delta_encoding.hpp
     ../../include/codec/L2_DataType.hpp
-    ../../include/technical_analysis.hpp
+    ../../include/AnalysisTechnical.hpp
+    ../../include/AnalysisHighFrequency.hpp
 )
 
 # Create executable
