--- a/cpp/projects/main_csv/CMakeLists.txt
+++ b/cpp/projects/main_csv/CMakeLists.txt
@@ -43,7 +43,8 @@ set(SOURCES
     ../../src/codec/binary_decoder_L2.cpp
     ../../src/codec/binary_encoder_L2.cpp
     ../../src/misc/logging.cpp
-    ../../src/technical_analysis.cpp
+    ../../src/AnalysisTechnical.cpp
+    ../../src/AnalysisHighFrequency.cpp
     ../../src/main_csv.cpp
 )
 
@@ -63,7 +64,8 @@ set(HEADERS
     ../../include/codec/binary_encoder_L2.hpp
     ../../include/codec/delta_encoding.hpp
     ../../include/codec/L2_DataType.hpp
-    ../../include/technical_analysis.hpp
+    ../../include/AnalysisTechnical.hpp
+    ../../include/AnalysisHighFrequency.hpp
 )
 
 # Disable fast-math specifically for JSON library to avoid infinity issues
